--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,7 @@
   --main-hover: #290214;
 
   --main-font-style: "Roboto", sans-serif;
+  --main-condensed-font: "Roboto Condensed", sans-serif;
 
   // padrao para responsividade tbm
 }
