--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,7 @@
 
   --main-font-style: "Roboto", sans-serif;
   --main-condensed-font: "Roboto Condensed", sans-serif;
+  --h2-font-size: clamp(2rem, 3vw, 3rem);
 
   // padrao para responsividade tbm
 }
@@ -15,3 +16,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.aligned-main-section {
+  display:flex;
+  align-items: center;
+  justify-content:space-between;
+  padding: 1.5rem 4rem;
+
+  width: 100%;
+  max-width: 100%;
+}
+
