--- a/src/Filter/filter.css
+++ b/src/Filter/filter.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   font-family: var(--main-font-style);
   padding: 3rem 0;
-  width:100%;
+  width: 100%;
   max-width: 100%;
 }
 
@@ -34,12 +34,12 @@
   gap: 1rem;
   align-items: center;
 
-  p{
+  p {
     font-weight: 700;
   }
 
   color: var(--main-brown-licore);
-  font-size:clamp(0.6rem, 1.5vw, 0.8rem);
+  font-size: clamp(0.6rem, 1.5vw, 0.8rem);
 
   width: 40%;
   max-width: 50%;
@@ -49,17 +49,26 @@
   background-color: transparent;
   border: 2px solid var(--main-brown-licore);
   width: fit-content;
-  
 
   border-radius: 2rem;
   padding: 0.5rem 1rem;
-
-
 }
 
-.buttons-filter-choices button:hover{
+.buttons-filter-choices button:hover {
   background-color: var(--main-yellow-saffron);
   cursor: pointer;
 }
 
 
+.section-line {
+  border: 2px solid var(--main-brown-licore);
+  width: 88%;
+  max-width: 100%;
+  margin: 0.4rem 1.9rem;
+  margin-bottom: 2rem;
+}
+
+
+.section-title {
+  color: red;
+}
