--- a/src/Filter/filter.css
+++ b/src/Filter/filter.css
@@ -47,6 +47,7 @@
   background-color: transparent;
   border: 2px solid var(--main-brown-licore);
   width: fit-content;
+  font-weight:700;
 
   border-radius: 2rem;
   padding: 0.5rem 1rem;
@@ -59,8 +60,8 @@
 
 
 .section-line {
-  border: 2px solid var(--main-brown-licore);
-  width: 88%;
+  border: 1.8px solid var(--main-brown-licore);
+  width: 90%;
   max-width: 100%;
   margin: 0.4rem 1.9rem;
   margin-bottom: 2rem;
@@ -72,6 +73,11 @@
 }
 
 .filter-option:focus{
+  background-color: var(--main-yellow-saffron);
+  cursor: pointer;
+}
+
+.active {
   background-color: var(--main-yellow-saffron);
   cursor: pointer;
 }
