--- a/src/Products/products.css
+++ b/src/Products/products.css
@@ -1,7 +1,7 @@
 @import url("../global.css");
 
-
-.container-products, .error-section {
+.container-products,
+.error-section {
   display: flex;
   flex-direction: column;
   font-family: var(--main-font-style);
@@ -11,7 +11,6 @@
     font-size: clamp(1.5rem, 2vw, 1.5rem);
     color: var(--main-brown-licore);
     font-weight: 500;
-   
   }
 
   h4 {
@@ -21,19 +20,18 @@
   }
 }
 
-
 .product-card {
   display: flex;
   flex-direction: column;
   background-color: var(--bg-product);
   width: 20rem;
 
-
   align-items: initial;
   justify-content: space-between;
 
-  padding: 1.5rem
+  padding: 1.5rem;
 
+  border-radius: 1rem;
 }
 
 .product-card button {
@@ -46,30 +44,23 @@
   border: none;
 
   margin-top: 1rem;
-
- 
 }
-
 
 .product-rate {
   width: 9rem;
   height: 1.5rem;
 }
 
-.product-image  {
+.product-image {
   padding-bottom: 1rem;
   max-width: 100%;
 }
-
-
 
 .tooth-products {
   display: flex;
   flex-wrap: wrap;
   padding: 1rem 2.5rem;
   gap: 2rem;
- 
-
 }
 
 .product-price {
@@ -78,28 +69,31 @@
 }
 
 .error-section {
-
   height: 100vh;
 
-   h2 {
+  h2 {
     padding: 1rem 1.8rem;
     font-size: clamp(1.5rem, 2vw, 2rem);
     color: var(--main-yellow-saffron);
     font-weight: 700;
     text-align: center;
-   }
+    line-height: 3rem;
+  }
 }
 
-.error-section a:hover  {
+.error-section a:hover {
   color: var(--main-brown-licore);
   text-decoration: ;
-
 }
 
 .error-section img {
-
   width: 45rem;
   margin: 0 auto;
   padding-top: 5rem;
+}
+
+ul:hover {
+  scale: 1.1;
+  cursor: pointer;
 
 }
