--- a/src/Products/products.css
+++ b/src/Products/products.css
@@ -51,6 +51,10 @@
   height: 1.5rem;
 }
 
+.product-card button:hover {
+  cursor:pointer;
+}
+
 .product-image {
   padding-bottom: 1rem;
   max-width: 100%;
