--- a/src/Hero/hero.css
+++ b/src/Hero/hero.css
@@ -42,3 +42,17 @@
   font-weight: 400;
   padding-right:1.5vw;
 }
+
+// responsive
+
+
+@media screen and (min-width:375px) and (max-width:550px) {
+
+
+
+  .section-banner {
+    color:red;
+  }
+}
+
+
