--- a/src/Filter/filter.css
+++ b/src/Filter/filter.css
@@ -20,7 +20,9 @@
 
 .filter-choices {
   gap: 1rem;
-  font-size: clamp(1.4rem, 1.6vw, 1.2rem)
+  font-size: clamp(1.4rem, 1.6vw, 1.2rem);
+  padding-bottom: 0;
+  margin-top: -1rem;
 
   width: 100%;
   max-width: 100%;
@@ -114,6 +116,11 @@
     overflow:scroll;
     padding: 1.5rem 1.5rem;
 
+  }
+
+
+  .filter-choices::-webkit-scrollbar {
+   display:none;
   }
 
   .section-filter {
