--- a/src/Hero/hero.css
+++ b/src/Hero/hero.css
@@ -8,7 +8,7 @@
   max-width: 100%;
   display: flex;
   align-items: center;
-  color: var(--bg-product);
+  color: var(--main-yellow-cornsilk);
   font-family: var(--main-font-style);
   font-size: 1.5rem;
 
@@ -40,19 +40,13 @@
   font-size: clamp(1rem, 1.6vw, 1.5rem);
   font-family: var(--main-condensed-font);
   font-weight: 400;
-  padding-right:1.5vw;
+  padding-right: 1.5vw;
 }
 
 // responsive
 
-
-@media screen and (min-width:375px) and (max-width:550px) {
-
-
-
+@media screen and (min-width: 375px) and (max-width: 550px) {
   .section-banner {
-    color:red;
+    color: red;
   }
 }
-
-
