--- a/src/Products/products.css
+++ b/src/Products/products.css
@@ -1,5 +1,10 @@
 @import url("../global.css");
 
+.section-type-products {
+  margin-top: -2rem;
+  padding-left: 1rem;
+}
+
 .container-products,
 .error-section {
   display: flex;
@@ -18,14 +23,13 @@
     color: var(--main-brown-licore);
     font-size: clamp(1.2rem, 2.3vw, 1.5rem);
   }
- 
 }
 
 .product-card {
   display: flex;
   flex-direction: column;
-  background-color: var(--bg-product);
-  width: 20rem;
+  background-color: var(--main-yellow-cornsilk);
+  max-width: 100%;
 
   align-items: initial;
   justify-content: space-between;
@@ -53,7 +57,10 @@
 }
 
 .product-card button:hover {
-  cursor:pointer;
+  cursor: pointer;
+
+  background-color: white;
+  border: 1px var(--main-brown-licore) solid;
 }
 
 .product-image {
@@ -98,32 +105,34 @@
 }
 
 ul:hover {
-  scale: 1.1;
+  background-color: var(--hover-cornsilk);
   cursor: pointer;
-
 }
 
+ul:hover .product-price {
+  color: var(--main-brown-licore);
+}
+
+ul:hover .product-previous-price {
+  color: #e94f37;
+}
 
 .container-cart {
-  display:none;
-
+  display: none;
 }
 
 .container-cart.active {
-
-  display:flex;
+  display: flex;
   margin-left: auto;
   width: 12rem;
   max-width: 13rem;
 
   margin-left: auto;
-
 }
 
 #root {
-  display:flex;
+  display: flex;
   flex-direction: column;
-
 }
 
 .cart-sidebar {
@@ -131,14 +140,11 @@ ul:hover {
   flex-direction: column;
 
   border-radius: 0.3rem;
-  background-color: var(--bg-product);
-
-
+  background-color: var(--main-yellow-cornsilk);
 
   padding: 1rem;
   text-align: center;
 }
-
 
 .cart-title {
   border-radius: 0.5rem;
@@ -148,28 +154,65 @@ ul:hover {
   background-color: var(--main-yellow-saffron);
 }
 
+.product-discount {
+  background-color: var(--main-brown-licore);
+  color: var(--main-yellow-cornsilk);
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+
+  font-size: clamp(0.8rem, 1vw, 0.9rem);
+}
+
+.no-discount img {
+  padding-top: 1.5rem;
+}
+
+.product-discount:hover {
+  background-color: var(--hover-licore);
+}
+
 .cart-total {
-  display:flex;
+  display: flex;
   justify-content: space-between;
   margin: 1.4rem 0;
   padding: 0.8rem 0;
   border-top: 1px solid var(--main-brown-licore);
 }
 
-
-@media screen and (min-width:320px) and (max-width:550px) {
-
+@media screen and (min-width: 320px) and (max-width: 650px) {
   .tooth-products {
-    flex-wrap:nowrap;
+    flex-wrap: nowrap;
     overflow: scroll;
     padding: 1rem 1.7rem;
-    
   }
 
   .container-products {
-    margin-left: -0.4rem;
+    margin-left: -1.4rem;
+  }
+
+  .section-type-products {
+    margin-top: -3.8rem;
+  }
+
+  .product-image {
+    max-width: fit-content;
+    width: 18rem;
+    padding-right: 1rem;
+  }
+
+  .product-card {
+   
   }
 
 
+  .section-line {
+    width: 85%;
+  }
 
+  .section-type-products::webkit-scrollbar {
+    background-color:red;
+  }
+
+
+ 
 }
