--- a/src/global.css
+++ b/src/global.css
@@ -1,12 +1,15 @@
 :root {
   --main-brown-licore: #1e000e;
   --main-yellow-saffron: #f7c325;
-  --bg-product: #fdf3d3;
-  --main-hover: #290214;
+  --main-yellow-cornsilk: #fdf3d3;
+  --hover-licore: #2e0619;
+
+  --hover-safron: #c7a53d;
+  --hover-cornsilk: #ebdcaa;
 
   --main-font-style: "Roboto", sans-serif;
   --main-condensed-font: "Roboto Condensed", sans-serif;
-  --h2-font-size: clamp(2rem, 3vw, 3rem);
+  --h2-font-size: clamp(2.5rem, 3vw, 3rem);
 
   --mobile-screen: 320px;
   --tablet-screen: 650px;
@@ -24,26 +27,21 @@
 }
 
 .aligned-main-section {
-  display:flex;
+  display: flex;
   align-items: center;
-  justify-content:space-between;
+  justify-content: space-between;
   padding: 1.5rem 4rem;
 
   width: 100%;
   max-width: 100%;
 }
 
-
-@media screen and (min-width:320px) and (max-width:550px) {
+@media screen and (min-width: 320px) and (max-width: 650px) {
   .aligned-main-section {
     padding: 1.5rem;
   }
-
 }
 
 ul {
   list-style-type: none;
 }
-
-
-
