--- a/src/Filter/filter.css
+++ b/src/Filter/filter.css
@@ -65,7 +65,7 @@
 
 .section-line {
   border: 1.8px solid var(--main-brown-licore);
-  width: 90%;
+  width: 88%;
   max-width: 100%;
   margin: 0.4rem 1.9rem;
   margin-bottom: 2rem;
@@ -86,7 +86,7 @@
   cursor: pointer;
 }
 
-@media screen and (min-width:320px) and (max-width:900px) {
+@media screen and (min-width:320px) and (max-width:800px) {
 
   .button-filter-choices {
 
@@ -128,9 +128,6 @@
   }
 
 
-  header {
-    background-color:red;
-  }
 
   .section-line {
     margin-bottom: 0.8rem;
@@ -138,8 +135,21 @@
 
 
 
+ }
 
+ @media screen and (min-width:800px) and (max-width:1250px) {
 
+  .buttons-filter-choices button {
+    width: 13em;
+  }
 
+  .filter-choices {
+    overflow:scroll;
+    padding: 1.5rem 1.5rem;
 
+  }
+
+  .filter-choices::-webkit-scrollbar {
+    display:none;
+   }
  }
