--- a/src/Products/products.css
+++ b/src/Products/products.css
@@ -179,15 +179,19 @@ ul:hover .product-previous-price {
   border-top: 1px solid var(--main-brown-licore);
 }
 
-@media screen and (min-width: 320px) and (max-width: 650px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .tooth-products {
     flex-wrap: nowrap;
     overflow: scroll;
     padding: 1rem 1.7rem;
   }
 
-  .container-products {
+  .container-products, .error-section {
     margin-left: -1.4rem;
+  }
+
+  .error-section img {
+    width: 26rem;
   }
 
   .section-type-products {
@@ -216,3 +220,20 @@ ul:hover .product-previous-price {
 
  
 }
+
+// 
+
+
+@media screen and (min-width: 800px) and (max-width: 1250px) {
+
+  .tooth-products {
+    justify-content: center;
+  }
+
+
+  
+
+}
+
+
+
