--- a/src/global.css
+++ b/src/global.css
@@ -36,10 +36,22 @@
   max-width: 100%;
 }
 
-@media screen and (min-width: 320px) and (max-width: 650px) {
+button:hover {
+
+  cursor:pointer;
+}
+
+@media screen and (min-width: 320px) and (max-width: 800px) {
   .aligned-main-section {
-    padding: 1.5rem;
+    padding-left: 1.5rem;
   }
+}
+
+@media screen and (min-width: 800px) and (max-width: 1250px) {
+  .aligned-main-section {
+    padding: 1rem 3rem;
+  }
+
 }
 
 ul {
