--- a/src/Email/email.css
+++ b/src/Email/email.css
@@ -1,6 +1,6 @@
 footer {
-  display:flex;
-  align-items:center;
+  display: flex;
+  align-items: center;
   justify-content: space-between;
 
   margin-top: 5rem;
@@ -8,21 +8,18 @@ footer {
 }
 
 .footer-img {
-  width:100%;
+  width: 100%;
   height: 100%;
 }
-
 
 .footer-img-element {
   width: 25%;
   height: 100%;
-
-
 }
 .footer-email {
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 75%;
   height: 98%;
 
@@ -32,17 +29,20 @@ footer {
 }
 
 .footer-email div {
-  display:flex;
-  flex-direction:column;
+  display: flex;
+  flex-direction: column;
   gap: 1.5rem;
 
   width: 60%;
   margin: 0 auto;
   color: var(--main-brown-licore);
+}
+
+.footer-email h2 {
   font-weight: 500;
 
   line-height: 2.8rem;
-  font-size:clamp(2rem, 2vw, 2rem);
+  font-size: clamp(1.5rem, 2vw, 2rem);
 
   margin-top: 2rem;
 }
@@ -51,7 +51,7 @@ footer {
   background-color: var(--main-yellow-saffron);
 
   border-radius: 0.5rem;
-  border:none;
+  border: none;
   font-weight: 700;
   color: var(--main-brown-licore);
   font-size: 1.2rem;
@@ -62,7 +62,7 @@ footer {
 }
 
 .footer-form-button:hover,
-.footer-form-button:active{
+.footer-form-button:active {
   background-color: var(--hover-safron);
 }
 
@@ -73,16 +73,56 @@ footer {
   padding: 0.8rem 1rem;
   height: 4rem;
 
-  width: 70%;
+  width: 65%;
   font-size: 1.2rem;
   color: var(--main-brown-licore);
   font-weight: 500;
-
 
   background-color: transparent;
 }
 
 .footer-form {
-  display:flex;
+  display: flex;
   gap: 1.2rem;
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  footer {
+    flex-direction: column;
+  }
+
+  .footer-img-element {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .footer-email {
+    width: 100%;
+    height: auto;
+  }
+
+  .footer-email div {
+    width: 100%;
+
+    margin-top: 0.5rem;
+  }
+
+  .footer-email h2 {
+    line-height: 1.5rem;
+    font-size: 1.3rem;
+    padding: 1.5rem;
+  }
+
+  .footer-form {
+    flex-direction: column;
+  }
+
+  .footer-form-button,
+  .footer-email-input {
+    width: 90%;
+    max-width: 90%;
+    margin: 0 auto;
+    height: 3rem;
+    font-size: 1rem;
+  }
 }
