todos como default

--- a/src/Products/products.css
+++ b/src/Products/products.css
@@ -25,6 +25,11 @@
   }
 }
 
+
+.error-section a {
+  color: var(--main-yellow-saffron);
+}
+
 .product-card {
   display: flex;
   flex-direction: column;
