--- a/src/Filter/filter.css
+++ b/src/Filter/filter.css
@@ -128,14 +128,9 @@
     padding-bottom: 1.5rem;
   }
 
-
-
   .section-line {
     margin-bottom: 0.8rem;
   }
-
-
-
  }
 
  @media screen and (min-width:800px) and (max-width:1250px) {
@@ -155,26 +150,5 @@
    }
  }
 
- @media screen and (min-width: 320px) and (max-width: 800px) {
+ //hero-responsivo
 
-  /* .section-banner {
-    background-image: url("../assets/images/img_hero_mobile.svg");
-    background-size: contain;
-    background-position: initial
-  } */
-
-  .banner-text {
-   
-   justify-content: center;
-    width: 100%;
-    padding: 1.5rem;
-  }
-
-  .banner-text h2 {
-    width: 100%;
-    max-width: 100%;
-  }
-
-
-
-}
