--- a/src/Hero/hero.css
+++ b/src/Hero/hero.css
@@ -1,53 +1,46 @@
 @import url("../global.css");
 
+.banner-hero {
+  background-image: url("../assets/images/oi.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
 
-.banner-image {
+  max-width: 100%;
+  width: 100%;
+  height: 50vh;
 
-    width: 48%;
- 
+  display: flex;
+
+  color: var(--main-yellow-cornsilk);
+  font-family: var(--main-font-style);
+  font-size: 1.5rem;
+
 }
 
+.banner-image {
+  background
+  display: none;
 
+}
 
 .section-banner {
 display:flex;
 width: 100%;
 
-
-background-image: url("../assets/images/img_bg_hero.svg")
-
-
 }
 
 
 .banner-text {
-/*  background: linear-gradient(180deg, #BA8C66 0%, #A37654 100%);  */
+
+  display:flex;
+  flex-direction: column;
+  justify-content:center;
+
+  width: 45%;
+  margin-left: auto;
 }
 
 
-
-/*   background-image: l("../assets/images/img_hero.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  max-width: 100%;
-  display: flex;
-  align-items: center;
-  color: var(--main-yellow-cornsilk);
-  font-family: var(--main-font-style);
-  font-size: 1.5rem;
-
-  height: 50vh; */
-
-
-/* .banner-text  {
-
-
-  padding: 0.8vh 2vw;
-  display: flex;
-  flex-direction: column;
-  margin-left: auto;
-} */
 
 .banner-text span {
   font-style: italic;
@@ -68,7 +61,56 @@ background-image: url("../assets/images/img_bg_hero.svg")
   padding-right: 1.5vw;
 }
 
-// responsive
+@media screen and (min-width: 320px) and (max-width: 800px) {
+
+  
+  .header-all {
+    display:none
+  }
+  
+  .banner-hero {
+    flex-direction:column;
+    background: none;
+    height: 65vh;
+ 
+  }
+
+  .banner-image {
+
+    background-image: url("../assets/images/img_hero_mobile.svg");
+    background-repeat: no-repeat;
+    background-size:cover;
+
+    height: 75vh;
+    background-position: initial;
+  } 
+
+  .banner-text {
+    background: linear-gradient(180deg, #BA8C66 0%, #A37654 100%);
+    display:flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 100%;
+    height: 30%;
+    padding: 1.5rem;
+ 
+  
+  }
+
+  .banner-text h2 {
+    width: 100%;
+    max-width: 100%;
+  }
 
 
-ur
+
+}
+
+@media screen and (min-width: 801px) and (max-width: 1250px) {
+
+}
+
+
+
+
+
