--- a/src/Email/email.css
+++ b/src/Email/email.css
@@ -1,4 +1,4 @@
-footer {
+.lead {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -6,31 +6,30 @@ footer {
   margin-top: 5rem;
   height: 25rem;
 
-  padding-bottom: 5rem;
 }
 
-.footer-img {
-  width: 100%;
+.lead-img {
+
   height: 100%;
 }
 
-.footer-img-element {
-  width: 25%;
+.lead-img-element {
+
   height: 100%;
 }
-.footer-email {
+.lead-email {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 75%;
-  height: 98%;
+  height: 100%;
 
   margin: 0 auto;
 
   background-color: var(--main-yellow-cornsilk);
 }
 
-.footer-email div {
+.lead-email div {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -40,7 +39,7 @@ footer {
   color: var(--main-brown-licore);
 }
 
-.footer-email h2 {
+.lead-email h2 {
   font-weight: 500;
 
   line-height: 2.8rem;
@@ -49,7 +48,7 @@ footer {
   margin-top: 2rem;
 }
 
-.footer-form-button {
+.lead-form-button {
   background-color: var(--main-yellow-saffron);
 
   border-radius: 0.5rem;
@@ -63,12 +62,12 @@ footer {
   padding: 0.8rem 1.6rem;
 }
 
-.footer-form-button:hover,
-.footer-form-button:active {
+.lead-form-button:hover,
+.lead-form-button:active {
   background-color: var(--hover-safron);
 }
 
-.footer-email-input {
+.lead-email-input {
   border: 2px var(--main-brown-licore) solid;
   border-radius: 0.5rem;
 
@@ -83,44 +82,48 @@ footer {
   background-color: transparent;
 }
 
-.footer-form {
+.lead-form {
   display: flex;
   gap: 1.2rem;
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
-  footer {
+  lead {
     flex-direction: column;
   }
 
-  .footer-img-element {
+  .lead-img {
+    max-width:100%;
+  }
+
+  .lead-img-element {
     width: 100%;
     max-width: 100%;
   }
 
-  .footer-email {
+  .lead-email {
     width: 100%;
     height: auto;
   }
 
-  .footer-email div {
+  .lead-email div {
     width: 100%;
 
-    margin-top: 0.5rem;
+    padding-top: 0.5rem;
   }
 
-  .footer-email h2 {
+  .lead-email h2 {
     line-height: 1.5rem;
     font-size: 1.3rem;
     padding: 1.5rem;
   }
 
-  .footer-form {
+  .lead-form {
     flex-direction: column;
   }
 
-  .footer-form-button,
-  .footer-email-input {
+  .lead-form-button,
+  .lead-email-input {
     width: 90%;
     max-width: 90%;
     margin: 0 auto;
