--- a/src/Hero/hero.css
+++ b/src/Hero/hero.css
@@ -1,7 +1,7 @@
 @import url("../global.css");
 
 .banner-hero {
-  background-image: url("../assets/images/oi.svg");
+  background-image: url("../assets/images/img_hero_default.svg");
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -15,6 +15,10 @@
   font-family: var(--main-font-style);
   font-size: 1.5rem;
 
+}
+
+.banner-contact {
+  display:none
 }
 
 .banner-image {
@@ -80,6 +84,7 @@ width: 100%;
     background-image: url("../assets/images/img_hero_mobile.svg");
     background-repeat: no-repeat;
     background-size:cover;
+    background-position: center;
 
     height: 75vh;
     background-position: initial;
@@ -102,11 +107,108 @@ width: 100%;
     max-width: 100%;
   }
 
+  .banner-contact {
+    display:none;
+  }
+
 
 
 }
 
+@media screen and (min-width:300px) and (max-width:369px) {
+
+  header .button-assign, buttons-filter-choices .img-chat {
+    display:none;
+  }
+
+
+  .banner-contact {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    position:absolute;
+    width: 100%;
+    max-width: 100%;
+    padding: 1.5rem;
+
+    margin-top: 34vh;
+
+  }
+
+  .banner-text {
+    height: 36%;
+    padding-bottom: 2vh;
+  }
+
+  .banner-hero {
+    height: 79vh;
+  }
+
+
+
+
+
+
+ 
+
+}
+
+
+@media screen and (min-width:370px) and (max-width:800px) {
+
+  header .button-assign, buttons-filter-choices .img-chat {
+    display:none;
+  }
+
+  .banner-hero {
+    height: 70vh;
+  }
+
+
+
+  .banner-contact {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    position:absolute;
+    width: 100%;
+    max-width: 100%;
+    padding: 1.5rem;
+
+    margin-top: 33vh;
+
+  }
+
+
+  .header-user {
+    gap: 1.5rem;
+  }
+
+  #header-cart-user {
+    padding: 0.5rem;
+  }
+
+
+
+}
+
+
+
+
 @media screen and (min-width: 801px) and (max-width: 1250px) {
+
+  .banner-contact,  {
+    display:none;
+  }
+
+  .banner-text {
+    margin-right: auto;
+    margin-left: 0;
+    padding: 3rem;
+    width: 50%;
+  }
+
+
 
 }
 
