--- a/src/global.css
+++ b/src/global.css
@@ -11,11 +11,6 @@
   --main-condensed-font: "Roboto Condensed", sans-serif;
   --h2-font-size: clamp(1.8rem, 3vw, 3rem);
 
-  --mobile-screen: 320px;
-  --tablet-screen: 650px;
-  --large-tablet-screen: 900px;
-  --desktop-screen: 1100px;
-  --large-desktop-screen: 1700px;
 }
 
 * {
@@ -44,6 +39,7 @@ button:hover {
 @media screen and (min-width: 320px) and (max-width: 800px) {
   .aligned-main-section {
     padding-left: 1.5rem;
+    gap: 1rem;
   }
 }
 
