--- a/src/global.css
+++ b/src/global.css
@@ -32,8 +32,11 @@
 }
 
 button:hover {
-
   cursor:pointer;
+}
+
+::webkit-scrollbar {
+  
 }
 
 @media screen and (min-width: 320px) and (max-width: 800px) {
