--- a/src/Hero/hero.css
+++ b/src/Hero/hero.css
@@ -1,7 +1,7 @@
 @import url("../global.css");
 
 .banner-hero {
-  background-image: url("../assets/images/img_hero_default.svg");
+  background-image: url(".././assets/images/img_hero_default.svg");
   background-size: cover;
   background-repeat: no-repeat;
 
